@@ -115,19 +115,13 @@ try {
 
     $sslVerificationDisabled = ($protocol -eq "https://")
     if ($sslVerificationDisabled) {
-        if (-not ([System.Management.Automation.PSTypeName]"SslVerification").Type)
-        {
-            Add-Type -TypeDefinition "
-                using System.Net.Security;
-                using System.Security.Cryptography.X509Certificates;
-                public static class SslVerification
-                {
-                    private static bool ValidationCallback(object sender, X509Certificate certificate, X509Chain chain, SslPolicyErrors sslPolicyErrors) { return true; }
-                    public static void Disable() { System.Net.ServicePointManager.ServerCertificateValidationCallback = ValidationCallback; }
-                    public static void Enable()  { System.Net.ServicePointManager.ServerCertificateValidationCallback = null; }
-                }"
+        if ($isPsCore) {
+            $parameters += @{ "SkipCertificateCheck" = $true }
+            $sslVerificationDisabled = $false
         }
-        [SslVerification]::Disable()
+        else {
+            [SslVerification]::Disable()
+        }
     }
 
     if ($method -eq "POST" -and !$body) {
